<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <ImageButton
            android:id="@+id/ib_login_phone_fastlogin"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@mipmap/return_l_b"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/set_password"
            android:textSize="@dimen/toolbar_textSize"
            android:textColor="@color/black"
            android:gravity="center_vertical|center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_setpassword_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:text="@string/input_password"
            android:textSize="@dimen/toolbar_textSize"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/et_setpassword_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:text="@string/confirm_password"
            android:textSize="@dimen/toolbar_textSize"
            android:layout_marginTop="40dp"
            android:singleLine="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_tip"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>
        <Button
            android:id="@+id/bt_setpassword_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_submit"
            android:background="@color/colorAccent"
            android:textSize="@dimen/toolbar_textSize"/>


    </LinearLayout>

</LinearLayout>
