<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rl_user_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_userlogin_return"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/return_l_b"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_login_login"
                style="@style/userlogin_head_textView"
                android:layout_marginLeft="130dp"



                android:text="@string/login"
              />
            <TextView
                android:id="@+id/tv_login_register"
                style="@style/userlogin_head_textView"
                android:layout_marginLeft="110dp"

                android:text="@string/register"
              />
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <EditText
                style="@style/userlogin_edittext"
                android:id="@+id/et_login_username"
                android:hint="@string/username"
                android:inputType="phone|textEmailAddress"/>
            <EditText
                style="@style/userlogin_edittext"
                android:id="@+id/et_login_password"
                android:hint="@string/loginpassword"
                android:inputType="textPassword"
                android:layout_below="@id/et_login_username"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@id/et_login_username"/>
            <TextView
                android:id="@+id/tv_login_color"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#fa0f07f2"
                android:layout_below="@id/et_login_password"
                android:layout_alignLeft="@id/et_login_username"/>
            <Button
                android:id="@+id/bt_login_confirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/login"
                android:textSize="20dp"
                android:background="#e20b0b"
                android:layout_below="@id/tv_login_color"
                android:layout_alignLeft="@id/tv_login_color"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_below="@id/bt_login_confirm"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/tv_login_numberLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phone_fast_login"
                    android:textSize="15dp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_login_forgetPW"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/forget_password"
                    android:gravity="right"
                    android:textSize="15dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>